build_error.txt
[  8%] Built target shaders_spirv
[ 11%] Building CXX object CMakeFiles/hello.dir/src/core/application.cpp.o
/run/media/jpereiratrindade/labeco10T/dev/cpp/vulkan/src/core/application.cpp: In member function ‘void core::Application::render(size_t)’:
/run/media/jpereiratrindade/labeco10T/dev/cpp/vulkan/src/core/application.cpp:578:52: error: ‘bool ui::CsvEditor::getAnalysisData(std::vector<std::vector<float> >&, std::vector<std::__cxx11::basic_string<char> >&, VisualizationConfig&)’ is private within this context
  578 |                      if (csvEditor_.getAnalysisData(data, labels, config)) {
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
In file included from /run/media/jpereiratrindade/labeco10T/dev/cpp/vulkan/src/core/application.h:13,
                 from /run/media/jpereiratrindade/labeco10T/dev/cpp/vulkan/src/core/application.cpp:1:
/run/media/jpereiratrindade/labeco10T/dev/cpp/vulkan/src/core/../ui/csv_editor.h:66:10: note: declared private here
   66 |     bool getAnalysisData(std::vector<std::vector<float>>& outData, std::vector<std::string>& outLabels, VisualizationConfig& outConfig);
      |          ^~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/hello.dir/build.make:191: CMakeFiles/hello.dir/src/core/application.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:90: CMakeFiles/hello.dir/all] Error 2
gmake: *** [Makefile:91: all] Error 2
